src/test/ui/feature-gates/issue-43106-gating-of-bench.stderr
error: cannot determine resolution for the attribute macro `bench`
  --> $DIR/issue-43106-gating-of-bench.rs:7:4
   |
LL | #![bench                   = "4100"]
   |    ^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: `bench` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-bench.rs:7:1
   |
LL | #![bench                   = "4100"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: perhaps you meant to use an outer attribute
   |
LL | #[bench                   = "4100"]
   |

error: aborting due to 2 previous errors

